--- a/projet_animalia/templates/animals/add.html.twig
+++ b/projet_animalia/templates/animals/add.html.twig
@@ -1,6 +1,8 @@
+{# http://localhost/project_animalia/projet_animalia/public/animals/add #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Formulaire pour ajouter un animal{% endblock %}
 
 {% block body %}
 
