--- a/projet_animalia/templates/animals/index.html.twig
+++ b/projet_animalia/templates/animals/index.html.twig
@@ -1,20 +1,21 @@
+{# http://localhost/project_animalia/projet_animalia/public/animals #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AnimalsController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="example-wrapper">
+        <h2>Bonjour sur notre blog !</h2>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/laragon/www/Project_animalia/projet_animalia/src/Controller/AnimalsController.php</code></li>
-        <li>Your template at <code>C:/laragon/www/Project_animalia/projet_animalia/templates/animals/index.html.twig</code></li>
-    </ul>
-</div>
+    {% for animal in animals %}
+        <article>
+            <div>
+                <img src="{{ animal.img }}" alt="">
+            </div>
+            <h3>{{ animal.name }}</h3>
+            {# <span>{{ animal.type_id }}</span> #}
+            {# <span>{{ animal.genre_id }}</span> #}
+        </article>
+    {% endfor %}
 {% endblock %}
