--- a/projet_animalia/templates/animals/index.html.twig
+++ b/projet_animalia/templates/animals/index.html.twig
@@ -8,6 +8,8 @@
         <h2>Bonjour sur notre blog !</h2>
     </div>
 
+    <nav></nav>
+
     {% for animal in animals %}
         <article>
             <div>
