--- a/projet_animalia/templates/animals/index.html.twig
+++ b/projet_animalia/templates/animals/index.html.twig
@@ -8,7 +8,9 @@
         <h2>Bonjour sur notre blog !</h2>
     </div>
 
-    <nav></nav>
+   <div>
+    <a href="animals/add">Ajouter un article</a>
+   </div>
 
     {% for animal in animals %}
         <article>
@@ -16,8 +18,8 @@
                 <img src="{{ animal.img }}" alt="">
             </div>
             <h3>{{ animal.name }}</h3>
-            {# <span>{{ animal.type_id }}</span> #}
-            {# <span>{{ animal.genre_id }}</span> #}
+            <span>{{ animal.typeId.Name }}</span>
+            <span>{{ animal.genreId.Name }}</span>
         </article>
     {% endfor %}
 {% endblock %}
