--- a/projet_animalia/assets/styles/app.css
+++ b/projet_animalia/assets/styles/app.css
@@ -1,3 +1,29 @@
+/****************** GENERAUX *******************/
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: skyblue;
+}
+
+img {
+    width: 100%;
+}
+
+span {
+    display: block;
+}
+
+/* INDEX = Page d'accueil */
+
+.animal-card {
+    width: 500px;
+    display: b;
+}
+
+.animal-card-box-img {
+    width: 300px;
 }
