--- a/projet_animalia/templates/base.html.twig
+++ b/projet_animalia/templates/base.html.twig
@@ -12,6 +12,16 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+            <h1>Animalia</h1>
+            <p>Un blog pour les amis des animaux, qui veulent parler d'animaux</p>
+            <nav>
+                <ul>
+                    <li><a href="{{ path('animals') }}">Accueil</a></li>
+                    <li><a href="animals/add">Ajouter un article</a></li>
+                </ul>
+            </nav>
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
