--- a/projet_animalia/assets/styles/app.css
+++ b/projet_animalia/assets/styles/app.css
@@ -5,10 +5,6 @@
     padding: 0;
 }
 
-body {
-    background-color: skyblue;
-}
-
 a {
     text-decoration: none;
 }
@@ -25,21 +21,30 @@ li {
     list-style: none;
 }
 
+main {
+    /* position:relative;
+    top: 100px; */
+    z-index: 0;
+}
+
 /* HEADER */
 
-ul {
+header {
+    box-shadow: 5px 5px 5px 5px rgba(185, 185, 185, 0.6);
+    position: sticky;
+    width: 100%;
+    z-index: 3;
+    background-color: rgb(255, 255, 255);
+    top: 0;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-}
-
-li {
-    margin: 5px;
-    background-color: rgb(0, 0, 255);
-    padding: 4px;
-    border-radius: 10px;
-}
-
-li>a {
-    color: rgb(255, 255, 255);
+    justify-content: center;
+    z-index: 3;
 }
 
 /* INDEX = Page d'accueil */
@@ -55,6 +60,9 @@ li>a {
     box-shadow: 5px 5px 5px 5px rgba(185, 185, 185, 0.6);
     padding: 10px;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .animal-card-box-img {
