--- a/projet_animalia/templates/animals/index.html.twig
+++ b/projet_animalia/templates/animals/index.html.twig
@@ -3,23 +3,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <main>
+        
+        <div class="example-wrapper">
+            <h2>Bonjour sur notre blog !</h2>
+        </div>
 
-    <div class="example-wrapper">
-        <h2>Bonjour sur notre blog !</h2>
-    </div>
+        <section class="animals-list">
+            {% for animal in animals %}
+                <article class="animal-card">
+                    <div class="animal-card-box-img">
+                        <img src="{{ asset('upload/' ~ animal.img) }}" alt="">
+                    </div>
+                    <h3>{{ animal.name }}</h3>
+                    <span>{{ animal.typeId.Name }}</span>
+                    <span>{{ animal.genreId.Name }}</span>
+                    <a href="{{ path('show_animal', {id: animal.id}) }}" class="btn-show">Voir l'article</a>
+                </article>
+            {% endfor %}
+        </section>
 
-    <section class="animals-list">
-        {% for animal in animals %}
-            <article class="animal-card">
-                <div class="animal-card-box-img">
-                    <img src="{{ asset('upload/' ~ animal.img) }}" alt="">
-                </div>
-                <h3>{{ animal.name }}</h3>
-                <span>{{ animal.typeId.Name }}</span>
-                <span>{{ animal.genreId.Name }}</span>
-                <a href="{{ path('show_animal', {id: animal.id}) }}">Voir l'article</a>
-            </article>
-        {% endfor %}
-    </section>
-
+    </main>
 {% endblock %}
